<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:orientation="vertical"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/judge_gavel_icon"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="343dp"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodePicker"
                android:layout_width="127dp"
                android:layout_height="48dp"
                android:paddingTop="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/phoneNum"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneNum"
                android:layout_width="203dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:fontFamily="@font/noto_sans"
                android:hint="@string/phone_number"
                android:paddingStart="5dp"
                android:paddingBottom="2dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.985"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view1"
                android:layout_width="304dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="@+id/phoneNum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/phoneNum"
                app:layout_constraintVertical_bias="0.893" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/numberWarning"
                android:layout_width="182dp"
                android:layout_height="22dp"
                android:text="@string/please_enter_a_valid_number"
                android:textColor="#E72525"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/phoneNum"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="@+id/countryCodePicker"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="343dp"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/seed"
            android:fontFamily="@font/noto_sans"
            android:text="@string/get_otp"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/or_continue_with_google_account"
            android:textColor="@color/black"
            android:textSize="19sp" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="22dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signupbtn"
                android:layout_width="348dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:fontFamily="@font/noto_sans"
                android:paddingStart="40dp"
                android:paddingBottom="8dp"
                android:text="@string/sign_in_with_google"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView"
                android:layout_width="41dp"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:src="@drawable/googleg_standard_color_18"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/signupbtn"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>